# toy_claude_project

./: .gitignore  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  README.md  TODO.md  requirements.txt  run_replanner_tests.py
ros2_ws/src/mpc_controller_ros2/: CMakeLists.txt  GAZEBO_TEST_GUIDE.md  MPPI_NAV2_GUIDE.md  README.md  package.xml  setup.py
ros2_ws/src/mpc_controller_ros2/config/: ackermann_steering_controller.yaml  benchmark_scenarios.yaml  diff_drive_controller.yaml  diff_drive_controller_high_speed.yaml  mpc_params.yaml  mpc_rviz.rviz  mppi_controller_params.yaml  nav2_params.yaml  nav2_params_ackermann_mppi.yaml  nav2_params_adaptive_shield_mppi.yaml  nav2_params_auto_selector.yaml  nav2_params_biased_mppi.yaml  nav2_params_biased_swerve_mppi.yaml  nav2_params_cc_cbf_mppi.yaml  nav2_params_cc_mppi.yaml  nav2_params_cem_mppi.yaml  nav2_params_clf_cbf_mppi.yaml  nav2_params_composable_mppi.yaml  nav2_params_constrained_mppi.yaml  nav2_params_cs_mppi.yaml  nav2_params_cs_swerve_mppi.yaml  nav2_params_cuda_mppi.yaml  nav2_params_custom_mppi.yaml  nav2_params_dial_mppi.yaml  nav2_params_dial_non_coaxial_mppi.yaml  nav2_params_dial_swerve_mppi.yaml  nav2_params_feedback_mppi.yaml  nav2_params_halton_mppi.yaml  nav2_params_hybrid_non_coaxial_mppi.yaml  nav2_params_hybrid_swerve_mppi.yaml  nav2_params_ilqr_mppi.yaml  nav2_params_ilqr_swerve_mppi.yaml  nav2_params_it_mppi.yaml  nav2_params_log_mppi.yaml  nav2_params_log_swerve_mppi.yaml  nav2_params_lp_mppi.yaml  nav2_params_multi_agent.yaml  nav2_params_nav2_mppi.yaml  nav2_params_non_coaxial_60deg_mppi.yaml  nav2_params_non_coaxial_hardware_mppi.yaml  (+28 more)
ros2_ws/src/mpc_controller_ros2/include/mpc_controller_ros2/: ackermann_model.hpp  adaptive_horizon_manager.hpp  adaptive_shield_mppi_controller_plugin.hpp  adaptive_temperature.hpp  agent_trajectory_manager.hpp  ancillary_controller.hpp  auto_selector_mppi_controller_plugin.hpp  barrier_function.hpp  batch_dynamics_wrapper.hpp  biased_mppi_controller_plugin.hpp  c3bf_barrier.hpp  cbf_safety_filter.hpp  cc_cbf_mppi_controller_plugin.hpp  cem_mppi_controller_plugin.hpp  chance_constrained_mppi_controller_plugin.hpp  clf_cbf_mppi_controller_plugin.hpp  clf_cbf_qp_solver.hpp  clf_function.hpp  composable_mppi_controller_plugin.hpp  conformal_predictor.hpp  constrained_mppi_controller_plugin.hpp  cost_functions.hpp  cs_mppi_controller_plugin.hpp  cuda_mppi_controller_plugin.hpp  cuda_rollout_engine.hpp  dial_mppi_controller_plugin.hpp  eigen_mlp.hpp  (+47 more)
ros2_ws/src/mpc_controller_ros2/launch/: gazebo_harmonic_test.launch.py  gazebo_mppi_test.launch.py  gazebo_ros2_control.launch.py  mpc_controller.launch.py  mppi_hardware_swerve.launch.py  mppi_nav2_gazebo.launch.py  mppi_navigation.launch.py  mppi_ros2_control_nav2.launch.py  nav2_mppi.launch.py  test_urdf.launch.py
ros2_ws/src/mpc_controller_ros2/maps/: corridor_map.pgm  corridor_map.yaml  empty_map.yaml  maze_map.pgm  maze_map.yaml  narrow_passage_map.pgm  narrow_passage_map.yaml  random_forest_map.pgm  random_forest_map.yaml  stress_test_arena.pgm  stress_test_map.yaml
ros2_ws/src/mpc_controller_ros2/mpc_controller_ros2/: safety_monitor.py  swerve_kinematics_node.py  twist_to_twist_stamped.py
ros2_ws/src/mpc_controller_ros2/plugins/: mppi_controller_plugin.xml
ros2_ws/src/mpc_controller_ros2/scripts/: benchmark_report.py  cleanup_launch.sh  controller_benchmark.py  debug_nav2.sh  generate_stress_test_map.py  mpc_controller_node  nav2_e2e_test.py  nav2_lifecycle_bringup.py  odom_to_tf.py  paper_benchmark.py  paper_benchmark_analysis.py  pedestrian_controller.py  pi_mppi_e2e_test.py  quick_test.sh  safety_monitor.py  send_goal.py  send_nav_goal.py  stress_test.py  swerve_controller_benchmark.sh  swerve_e2e_test.py  swerve_kinematics_node.py  test_robot_motion.py  test_wheel_motion.sh  train_residual_model.py  verify_robot_motion.py
ros2_ws/src/mpc_controller_ros2/src/: ackermann_model.cpp  adaptive_horizon_manager.cpp  adaptive_shield_mppi_controller_plugin.cpp  adaptive_temperature.cpp  agent_trajectory_manager.cpp  ancillary_controller.cpp  auto_selector_mppi_controller_plugin.cpp  barrier_function.cpp  batch_dynamics_wrapper.cpp  biased_mppi_controller_plugin.cpp  c3bf_barrier.cpp  cbf_safety_filter.cpp  cc_cbf_mppi_controller_plugin.cpp  cem_mppi_controller_plugin.cpp  chance_constrained_mppi_controller_plugin.cpp  clf_cbf_mppi_controller_plugin.cpp  clf_cbf_qp_solver.cpp  clf_function.cpp  composable_mppi_controller_plugin.cpp  conformal_predictor.cpp  constrained_mppi_controller_plugin.cpp  cost_functions.cpp  cs_mppi_controller_plugin.cpp  cuda_mppi_controller_plugin.cpp  cuda_rollout_engine_cpu.cpp  dial_mppi_controller_plugin.cpp  diff_drive_model.cpp  dynamic_obstacle_tracker.cpp  eigen_mlp.cpp  ensemble_dynamics_model.cpp  feedback_gain_computer.cpp  feedback_mppi_controller_plugin.cpp  halton_mppi_controller_plugin.cpp  halton_sampler.cpp  hybrid_swerve_mppi_controller_plugin.cpp  ilqr_mppi_controller_plugin.cpp  ilqr_solver.cpp  inter_agent_cost.cpp  it_mppi_controller_plugin.cpp  log_mppi_controller_plugin.cpp  (+33 more)
ros2_ws/src/mpc_controller_ros2/test/: test_mpc_controller_node.py
ros2_ws/src/mpc_controller_ros2/urdf/: ackermann_robot.urdf  differential_robot.urdf  differential_robot_ros2_control.urdf  differential_robot_simple.urdf  swerve_robot.urdf
ros2_ws/src/mpc_controller_ros2/worlds/: corridor_world.world  dynamic_obstacles_world.world  maze_world.world  mppi_test_simple.world  mppi_test_world.world  narrow_passage_world.world  pedestrian_world.world  random_forest_world.world
toy_claude_project/: .gitignore  pyproject.toml
toy_claude_project/.github/ISSUE_TEMPLATE/: claude-task.md
toy_claude_project/.github/workflows/: claude_dev.yml
toy_claude_project/examples/: path_tracking_demo.py
toy_claude_project/mpc_controller/: __init__.py
toy_claude_project/mpc_controller/controllers/: mpc.py
toy_claude_project/mpc_controller/models/: __init__.py
toy_claude_project/mpc_controller/utils/: trajectory.py
toy_claude_project/simulation/: simulator.py  visualizer.py
toy_claude_project/tests/: test_mpc.py
(+209 files in other folders)
